# SonarWeb

./: .env.example  .gitignore  LICENSE  README.md  config.json  main_app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
config/: logging.conf  secure_config.py  settings.py
core/: __init__.py  command_processor.py  config_manager.py
scripts/: cleanup.sh  setup.sh  start_services.sh
services/: __init__.py  audio_service.py  browser_service.py  screenshot_service.py  vision_service.py
ui/: __init__.py  components.py  main_window.py
utils/: __init__.py  constants.py  file_manager.py  logger.py
